--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nexapedia - Ensiklopedia Mini</title>
   <link rel="icon" href="img/AZqeyPWhF_7n2uswy0hjWA-AZqeyPWh3GF_hMWlMPdDeA.jpg">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="style3.css">
   <script defer src="script.js"></script>
 </head>
 <body class="theme-dark">
@@ -71,13 +71,16 @@
       <!-- SEARCH BAR -->
       <div class="search-row">
         <div class="search-box">
-          <svg class="search-icon" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M9.5 3a6.5 6.5 0 014.993 10.743l4.387 4.387a1 1 0 01-1.414 1.414l-4.387-4.387A6.5 6.5 0 119.5 3zm0 2a4.5 4.5 0 100 9 4.5 4.5 0 000-9z"/>
-          </svg>
-          <input id="searchInput" type="text" placeholder="Cari topik apa saja…">
-        </div>
+            <svg class="search-icon" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M9.5 3a6.5 6.5 0 014.993 10.743l4.387 4.387a1 1 0 01-1.414 1.414l-4.387-4.387A6.5 6.5 0 119.5 3zm0 2a4.5 4.5 0 100 9 4.5 4.5 0 000-9z"/>
+            </svg>
 
-        <button class="btn-ghost" id="searchBtn">🔍 <span id="searchBtnLabel">Cari</span></button>
+            <input id="searchInput" type="text" placeholder="Cari topik apa saja…">
+
+            <button class="btn-ghost earch-btn" id="searchBtn">
+                🔍
+            </button>
+        </div>
         <button class="btn-ghost" id="randomBtn">🎲 <span id="randomBtnLabel">Artikel acak</span></button>
       </div>
 
