--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nexapedia - Ensiklopedia Mini</title>
   <link rel="icon" href="img/AZqeyPWhF_7n2uswy0hjWA-AZqeyPWh3GF_hMWlMPdDeA.jpg">
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
 <body class="theme-dark">
